completed-login-for-single-user

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
+    <script src="../script.js" defer></script>
 </head>
 <body>
     <h1>welcome</h1>
-    <a href="../index.html">login</a>
+    <button id="logout-btn">Log Out</button>
 </body>
 </html>
