login-reg-page-complete

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>welcome</title>
+    <link rel="stylesheet" href="../style.css" />
     <script src="../script.js" defer></script>
-</head>
-<body>
-    <h1>welcome</h1>
-    <button id="logout-btn">Log Out</button>
-</body>
+  </head>
+  <body>
+    <div id="welcome">
+      <h1>welcome, <span id="loggedInUser"></span>!</h1>
+      <button id="logout-btn">LogOut</button>
+    </div>
+  </body>
 </html>
